Fixed bug with whitespace on bottom

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -9,7 +9,8 @@
     background-attachment: fixed;
     background-repeat: no-repeat;
     min-height: 100vh;
-    height: 100%
+    height: 100%;
+    padding-bottom: 48px;
 }
 
 .Card {
